--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -1,24 +1,55 @@
 <!doctype html>
 <html>
 <head>
-<title>Hello AngularJS</title>
-<link href="css/angular-bootstrap.css" rel="stylesheet">
+<title>Yggdrasil Project Management</title>
+
+<!-- Angular Material style sheet -->
+<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
 	display: none !important;
 }
 </style>
+
+<link href="css/yggdrasil.css" rel="stylesheet">
 </head>
 
-<body ng-app="hello">
-	<div class="container">
-		<h1>Greeting</h1>
-		<div ng-controller="home" ng-cloak class="ng-cloak">
-			<p>The ID is {{greeting.id}}</p>
-			<p>The content is {{greeting.content}}</p>
-		</div>
-	</div>
-	<script src="js/angular-bootstrap.js" type="text/javascript"></script>
-	<script src="js/hello.js"></script>
+<body ng-app="hello" layout="row" ng-cloak>
+
+    <md-sidenav layout="column" class="sidenav1" md-is-locked-open='true'>
+      Side
+    </md-sidenav>
+
+    <md-content flex layout="column">
+      <div layout="row" layout-padding layout-margin layout-fill style="min-height: 60%; max-height: 75%;">
+        
+        <md-content class="project-info-box" layout="column" flex="40">
+          <div> General Info Box</div>
+        </md-content>
+        <md-content class="features-box" layout="column" flex="35">
+          <div> Features Box</div>
+        </md-content>
+        <md-content class="issues-box" layout="column" flex="25">
+          <div>Issues Box Box</div>
+        </md-content>
+      </div>
+      <div class="comment-box" flex layout="row">
+        <md-content layout="column" flex style="background-color:white;">
+          Comment Section
+        </md-content>
+      </div>
+    </md-content>
+
+  <script src="js/angular-bootstrap.js" type="text/javascript"></script>
+  <script src="js/hello.js"></script>
+
+  <!-- Angular Material requires Angular.js Libraries -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+
+  <!-- Angular Material Library -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
 </body>
 </html>
