--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -14,10 +14,17 @@
 <link href="css/yggdrasil.css" rel="stylesheet">
 </head>
 
-<body ng-app="hello" layout="row" ng-cloak>
+<body ng-app="yggdrasil" layout="row" ng-cloak>
 
     <md-sidenav layout="column" class="sidenav1" md-is-locked-open='true'>
-      Side
+      
+      <div ng-controller="sidenavCtrl as ctrl">
+        <!-- Project list here -->
+        
+        <md-button ng-click="openDialog($event)" class="md-raised">
+          New Project
+        </md-button>
+      </div>
     </md-sidenav>
 
     <md-content flex layout="column">
@@ -41,7 +48,8 @@
     </md-content>
 
   <script src="js/angular-bootstrap.js" type="text/javascript"></script>
-  <script src="js/hello.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers.js"></script>
 
   <!-- Angular Material requires Angular.js Libraries -->
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
@@ -51,5 +59,6 @@
 
   <!-- Angular Material Library -->
   <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+
 </body>
 </html>
