Add working dialog to sidenav button

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
       <div ng-controller="sidenavCtrl as ctrl">
         <!-- Project list here -->
         
-        <md-button ng-click="openDialog($event)" class="md-raised">
+        <md-button ng-click="showDialog($event)" class="md-raised">
           New Project
         </md-button>
       </div>
