Implement GET from DB, update POST function.

--- a/server/src/main/resources/static/newproject.html
+++ b/server/src/main/resources/static/newproject.html
@@ -12,7 +12,7 @@
 	<form name="projectForm">
 	  <md-input-container class="md-block">
             <label>Project Title</label>
-            <input md-maxlength="30" ng-model="project.projectTitle" required>
+            <input md-maxlength="30" ng-model="project.title" required>
             <!-- <div ng-messages="projectForm.description.$error"> -->
             <!--   <div ng-message="required">This is required.</div> -->
             <!--   <div ng-message="md-maxlength">The name has to be less than 30 characters long.</div> -->
