Fix naming issue in html

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -51,7 +51,7 @@
 	  <md-subheader class="md-no-sticky">Features</md-subheader>
 	  <md-divider></md-divider>
 	  <md-list-item ng-repeat="feature in currentProject.features">
-	    <p> {{ feature.title }} </p>
+	    <p> {{ feature.description }} </p>
 	    <md-checkbox class="md-secondary" ng-model="feature.complete" style="color: green"></md-checkbox>
 	  </md-list-item>
 	</md-list>
