--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -50,9 +50,8 @@
         <md-list ng-cloak>
 	  <md-subheader class="md-no-sticky">Features</md-subheader>
 	  <md-divider></md-divider>
-	  <md-list-item ng-repeat="feature in currentProject.features">
+	  <md-list-item ng-repeat="feature in currentProject.features" ng-click="displayIssues(feature.issues)">
 	    <p> {{ feature.description }} </p>
-	    <md-checkbox class="md-secondary" ng-model="feature.complete" style="color: green"></md-checkbox>
 	  </md-list-item>
 	</md-list>
       </md-content>
@@ -61,8 +60,8 @@
         <md-list ng-cloak>
 	  <md-subheader class="md-no-sticky">Issues</md-subheader>
 	  <md-divider></md-divider>
-	  <md-list-item>
-	    <p> dummy issue </p>
+	  <md-list-item ng-repeat="issue in currentIssues">
+	    <p> {{ issue.description }} </p>
 	    <md-checkbox class="md-secondary"></md-checkbox>
 	  </md-list-item>
 	</md-list>
