--- a/server/src/main/resources/static/projectRoot.html
+++ b/server/src/main/resources/static/projectRoot.html
@@ -14,26 +14,26 @@
     <md-tab-label>Edit</md-tab-label>
     <md-tab-body>
       <md-input-container class="md-block" layout="row">
-	<div flex>
+	<div flex="">
 	  <label>Project Title</label>
-	  <input md-maxlength="30" ng-model="currentProject.title" required="required"> </textarea>
-</div>
-</md-input-container>
-<md-content flex="100" class="project-info-box">
-  <md-input-container class="md-block" layout="row">
-    <div flex>
-      <label>Project Description</label>
-      <textarea md-maxlength="200" ng-model="currentProject.description" required="required"> </textarea>
-    </div>
-  </md-input-container>
-</md-content>
-<md-divider></md-divider>
-<md-button class="md-raised" ng-click="applyEdit()">
-  Apply Changes
-</md-button>
-<md-button class="md-raised md-warn" ng-click="deleteProject(project)">
-  delete project
-</md-button>
-</md-tab-body>
-</md-tab>
+	  <input md-maxlength="30" ng-model="currentProject.title" required="required">
+	</div>
+      </md-input-container>
+      <md-content flex="100" class="project-info-box">
+	<md-input-container class="md-block" layout="row">
+	  <div flex>
+	    <label>Project Description</label>
+	    <textarea md-maxlength="200" ng-model="currentProject.description" required="required"> </textarea>
+	  </div>
+	</md-input-container>
+      </md-content>
+      <md-divider></md-divider>
+      <md-button class="md-raised" ng-click="applyEdit()">
+	Apply Changes
+      </md-button>
+      <md-button class="md-raised md-warn" ng-click="deleteProject(project)">
+	delete project
+      </md-button>
+    </md-tab-body>
+  </md-tab>
 </md-tabs>
