Implement comment form & postComment function

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -32,10 +32,7 @@
       </md-content>
     </div>
     
-    <div class="comment-box" flex layout="row">
-      <md-content layout="column" flex style="background-color:white;">
-        <p ng-repeat="comment in currentProject.comments">{{comment.text}}</p>
-      </md-content>
+    <div class="comment-box" flex layout="column" ng-include="'comments.html'">
     </div>
   </md-content>
 
