--- a/server/src/main/resources/static/features.html
+++ b/server/src/main/resources/static/features.html
@@ -1,13 +1,11 @@
-<md-tabs class="" md-selected="featureTabIndex" md-align-tabs="bottom" flex="" >
+<md-tabs class="tabs-box" md-selected="featureTabIndex" md-align-tabs="bottom" flex="" >
   <md-tab id="featureTab1" md-on-select="switchFeatureMode($index)">
     <md-tab-label>View</md-tab-label>
     <md-tab-body>
-      <md-subheader class="md-no-sticky">
-	Features
-      </md-subheader>
+      <h2 style="color: #34495e; margin-left: 1em;" flex="">Features</h2>
       <md-divider></md-divider>
 
-      <md-content class="features-box" flex="" layout-padding="">
+      <md-content class="content-box" flex="" layout-padding="">
 	<md-list ng-cloak>
 	  <md-list-item ng-repeat="feature in currentProject.features" ng-click="displayIssues(feature)">
 	    <p> {{ feature.description }} </p>
@@ -22,11 +20,10 @@
     <md-tab-body>
       <form name="newFeatureForm">
 	<md-input-container class="md-block" layout="row">
-	  <div flex>
+	  <div flex"">
 	    <label>New Feature</label>
 	    <input md-maxlength="50" ng-model="feature" required="required">
-	  </div>
-	  <div flex>
+
 	    <md-button class="md-raised" ng-click="addFeature(feature)">Add</md-button>
 	  </div>
 	</md-input-container>
@@ -36,7 +33,7 @@
       </md-subheader>
       <md-divider></md-divider>
 
-      <md-content class="features-box" flex="" layout-padding="">
+      <md-content class="content-box" flex="" layout-padding="">
 	<md-list ng-cloak>
 	  <md-list-item ng-repeat="feature in currentProject.features" ng-click="deleteFeature(feature)">
 	    <p> {{ feature.description }} </p>
