Login fixed, Logout function and button added

--- a/server/src/main/resources/static/sidenav.html
+++ b/server/src/main/resources/static/sidenav.html
@@ -16,4 +16,7 @@
 <md-button ng-click="showDialog($event)" class="md-raised" layout-align="center">
   New Project
 </md-button>
+<md-button ng-click="logout()" class="md-raised" layout-align="center" style="background-color: rgb(197,17,98)">
+  Logout {{ user.name }}
+</md-button>
 
