--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -35,7 +35,8 @@
     <div class="comment-box" flex layout="column" ng-include="'comments.html'" ng-show="loggedin">
     </div>
 
-      <div ng-show="!loggedin" class="col-md-6 col-md-offset-3">
+      <div ng-show="!loggedin" class="col-md-12" align="center">
+          <h1>Yggdrasil</h1>
           <h2>Login</h2>
           <form name="form" ng-submit="vm.login()" role="form">
               <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
